# sentinel

./: .gitignore  .gitleaks.toml  LICENSE  README.md  pyproject.toml  sentinel.db
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  incidents.py
config/: .env.example  actions.example.yml  settings.py  settings.schema.json
core/: audit.py  engine.py  incident.py  trust.py
docs/: PLUGIN_GUIDE.md  SECURITY.md
examples/quickstart/: README.md  run.py
governance/: agentaz.example.json  policy.example.yaml  reconciliation_targets.example.yaml
interfaces/: detector.py  enforcer.py  issue_tracker.py  notifier.py  orchestrator.py  remediator.py  state_store.py  verifier.py
plugins/detectors/: data_reconciliation.py  mock_example.py  temporal_workflow.py
plugins/enforcers/: agt.py  noop.py
plugins/issue_trackers/: github_issues.py  jira.py  linear.py
plugins/notifiers/: slack.py  stdout.py  webhook.py
plugins/orchestrators/: simple_loop.py  temporal.py
plugins/remediators/: claude_agent_sdk.py  human_manual.py  mock.py  shelley.py
plugins/secret_providers/: env_provider.py
plugins/state_stores/: postgres_store.py  sqlite_store.py
scripts/: glm_smoke_test.py  live_hermes_trial.py
src/sentinel/: config.py
src/sentinel/cli/: __init__.py  __main__.py  incidents.py
src/sentinel/core/: audit.py  engine.py  incident.py  trust.py
src/sentinel/interfaces/: detector.py  enforcer.py  issue_tracker.py  notifier.py  orchestrator.py  remediator.py  secret_provider.py  state_store.py  verifier.py
src/sentinel/plugins/: datasource.py
src/sentinel/plugins/detectors/: data_reconciliation.py  mock_example.py  temporal_workflow.py
src/sentinel/plugins/enforcers/: agt.py  noop.py
src/sentinel/plugins/issue_trackers/: github_issues.py  jira.py  linear.py
src/sentinel/plugins/notifiers/: slack.py  stdout.py  webhook.py
src/sentinel/plugins/orchestrators/: simple_loop.py  temporal.py
src/sentinel/plugins/remediators/: actionbook.py  claude_agent_sdk.py  hermes.py  hermes_mcp_tools.py  human_manual.py  mock.py  shelley.py
tests/: test_actionbook.py  test_agt_enforcer.py  test_audit_resume.py  test_config_default_notifier.py  test_data_reconciliation.py  test_enforcer_noop.py  test_enforcer_surface.py  test_engine_attempts.py  test_github_issues.py  test_hermes_remediator.py  test_mock_detector.py  test_mock_remediator.py  test_notifiers.py  test_shelley_remediator.py  test_simple_loop.py  test_skeletons_import.py  test_slack_notifier.py  test_sqlite_store.py  test_trust_reset.py
(+4 files in other folders)
