[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "A pluggable self-healing agent framework."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
webhook = []
github = []
postgres = ["psycopg[binary]"]
slack = ["slack-sdk"]
temporal = ["temporalio"]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-mock",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
mypy_path = ["."]
packages = ["core", "interfaces", "plugins", "cli", "examples", "config"]

[tool.coverage.run]
source = ["core", "interfaces", "plugins", "cli", "config"]

[tool.pytest.ini_options]
pythonpath = ["."]
